# AngryJets

./: AngryJets.cbp  AngryJets.depend  AngryJets.layout  CMakeLists.txt  README.md  README.txt  main.cpp
Assets/: settings.json
Assets/map/: garden.json  mount_doom.json
Assets/misc/: logo.psd
Doc/: Dokumentacja.docx
Engine/: Collision.cpp  Collision.h  Gui.h  NonCopyable.h  ResourceManager.cpp  ResourceManager.h  Settings.h  SoundRecycler.cpp  SoundRecycler.h  Speed.cpp  Speed.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StringUtil.h
Engine/Gui/: GuiHighlightedLabel.cpp  GuiHighlightedLabel.h  GuiHorizontalLayout.cpp  GuiHorizontalLayout.h  GuiLabel.cpp  GuiLabel.h  GuiLayout.cpp  GuiLayout.h  GuiVerticalLayout.cpp  GuiVerticalLayout.h  GuiWidget.cpp  GuiWidget.h  GuiWindow.cpp  GuiWindow.h
Engine/Settings/: SettingsAbstract.cpp  SettingsAbstract.h  SettingsGame.cpp  SettingsGame.h  SettingsKeybinding.cpp  SettingsKeybinding.h  SettingsMap.cpp  SettingsMap.h  SettingsPlayer.cpp  SettingsPlayer.h
Game/: Bullet.cpp  Bullet.h  BulletMinigun.cpp  BulletMinigun.h  Collidable.h  Flag.cpp  Flag.h  GameLoop.cpp  GameLoop.h  Ground.cpp  Ground.h  Gun.cpp  Gun.h  GunMinigun.cpp  GunMinigun.h  Hud.cpp  Hud.h  Jetman.cpp  Jetman.h  Player.cpp  Player.h  Ship.cpp  Ship.h  StateGameplay.cpp  StateGameplay.h  StateMenu.cpp  StateMenu.h  Vehicle.cpp  Vehicle.h
Tests/: CircularBuffer.h  vector2d.cpp  vector2d.h
Tests/CollisionTest/: CollisionTest.cbp  CollisionTest.depend  CollisionTest.layout  main.cpp
Tests/Ground/: Ground.cpp  Ground.h  main.cpp
Tests/GuiTest/: main.cpp
Tests/ResourceManagerTest/: ResourceManagerTest.cbp  ResourceManagerTest.depend  ResourceManagerTest.layout  main.cpp
